--- a/src/assets/css/all.scss
+++ b/src/assets/css/all.scss
@@ -1,4 +1,6 @@
 @import "~bootstrap/scss/functions";    //套用變數的方法
 @import "~bootstrap/scss/_variables";   //自定義變數
 @import "~bootstrap/scss/bootstrap";
+
 @import "./dashboard";
+@import "./frontHome.scss";
