--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -1,6 +1,7 @@
 @import "~bootstrap/scss/functions";    //套用變數的方法
-@import "./utils/variables";   //自定義變數
+@import "./utils/variables";   //自定義變數\
+@import "~bootstrap/scss/mixins";
 @import "~bootstrap/scss/bootstrap";
 
 @import "./base/base.scss";
-@import "./components/back/dashboard";
+
