--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -4,3 +4,5 @@
 
 @import "./base/base.scss";
 @import "./components/back/dashboard";
+@import "./pages/front/frontHomeMidBanner";
+@import "./pages/front/frontHomeHero";
