--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap');
 body {
   font-family: 'Noto Sans TC', sans-serif;
+
+}
+
+#main {
+  padding-top: 3.6656rem;
 }
