home暫停 product試驗中

--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -6,3 +6,5 @@
 @import "./components/back/dashboard";
 @import "./pages/front/frontHomeMidBanner";
 @import "./pages/front/frontHomeHero";
+@import "./components/front/frontFooter";
+@import "./pages/front/frontHomeBuildPC";
