--- a/src/assets/scss/pages/front/_frontHomeHero.scss
+++ b/src/assets/scss/pages/front/_frontHomeHero.scss
@@ -12,6 +12,8 @@
     padding: 1.5rem 0 30px;
     text-align: center;
     width: 100%;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
   }
 
   .card-text {
