--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -1,9 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap');
 body {
   font-family: 'Noto Sans TC', sans-serif;
-
+  background-color: $gray-200;
 }
 
 #main {
   padding-top: 3.6656rem;
+}
+
+img{
+	border: 0;
+	max-width: 100%;
+	height: auto;
 }
