--- a/src/assets/scss/pages/front/_frontHomeMidBanner.scss
+++ b/src/assets/scss/pages/front/_frontHomeMidBanner.scss
@@ -4,11 +4,9 @@
   display: block;
   margin: 0 auto;
   padding: 30px 50px;
-  border: 2px solid;
-  background-color: #343a40;
+  background-color: white;
 
   h6 {
-    color: white;
     width: 100%;
     text-align: center;
     margin: 0;
