--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -4,7 +4,6 @@
 
 @import "./base/base.scss";
 @import "./components/back/dashboard";
-@import "./pages/front/frontHomeMidBanner";
-@import "./pages/front/frontHomeHero";
 @import "./components/front/frontFooter";
-@import "./pages/front/frontHomeBuildPC";
+@import "./pages/front/frontProduct";
+@import "./pages/front/frontHome";
