--- a/src/assets/scss/utils/_variables.scss
+++ b/src/assets/scss/utils/_variables.scss
@@ -200,7 +200,9 @@ $grid-breakpoints: (
   sm: 576px,
   md: 768px,
   lg: 992px,
-  xl: 1200px
+  xl: 1200px,
+  2xl: 1600px,
+
 ) !default;
 
 @include _assert-ascending($grid-breakpoints, "$grid-breakpoints");
