--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -7,3 +7,4 @@
 @import "./components/front/frontFooter";
 @import "./pages/front/frontProduct";
 @import "./pages/front/frontHome";
+@import "./pages/front/frontSingleProduct";
