--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap');
 body {
   font-family: 'Noto Sans TC', sans-serif;
-  //background-color: $gray-200;
+  background-color: $gray;
 }
 
 #main {
