--- a/src/assets/scss/utils/_variables.scss
+++ b/src/assets/scss/utils/_variables.scss
@@ -73,6 +73,7 @@ $info:          $cyan !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
 $light:         $gray-100 !default;
+$gray:          $gray-200;
 $dark:          $gray-800 !default;
 
 $theme-colors: () !default;
@@ -86,7 +87,8 @@ $theme-colors: map-merge(
     "warning":    $warning,
     "danger":     $danger,
     "light":      $light,
-    "dark":       $dark
+    "gray":       $gray-200,
+    "dark":       $dark,
   ),
   $theme-colors
 );
