--- a/src/assets/scss/pages/front/_frontSingleProduct.scss
+++ b/src/assets/scss/pages/front/_frontSingleProduct.scss
@@ -1,38 +1,122 @@
-.fsp-container {
-  width: 1200px;
+.fsp-container-fluid {
+  //width: 100%;
+  max-width: 1200px;
   margin: 0 auto;
 
   .row {
     background-color: white;
+    margin: 0 auto;
+    padding: 1.5rem;
   }
 }
 
 .product-header {
-  .product-img {}
+
+  .row {
+    @media screen and (max-width: 767px) {
+      padding: 0.5rem 1.5rem 1.5rem 1.5rem;
+    }
+  }
+
+  .product-img {
+    min-height: 450px;
+    position: relative;
+
+    @media screen and (max-width: 767px) {
+      margin-bottom: 1rem;
+    }
+
+    img {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin: auto;
+      padding: 0 15px;
+      max-height: 100%;
+      max-width: 100%;
+    }
+  }
 
   .product-info {
-    padding-right: 3rem;
+    padding-right: 2rem;
+    display: flex;
+    flex-direction: column;
 
-    .price {
+    @media screen and (max-width: 767px) {
+      padding: 0 1rem;
+    }
+
+    .product-content {
+      flex-grow: 1;
+    }
+
+    .product-price {
       background-color: $gray-100;
       padding: 1rem;
+      margin-bottom: 0.75rem;
     }
   }
 
   .product-title {
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
   }
+
+  .product-input {
+    .buy-option {
+
+      .btn {
+        border-radius: 0rem;
+        margin-right: 5px;
+        width: 200px;
+        height: 44px;
+
+        @media screen and (max-width: 991px) {
+          width: 140px;
+        }
+      }
+    }
+
+    .quantity {
+      margin-bottom: 0.75rem;
+
+      .quantity-title {
+        display: inline-block;
+        vertical-align: middle;
+        text-align: center;
+        width: 80px;
+        height: 38px;
+        color: #6c757d;
+        line-height: 38px;
+
+      }
+
+      .btn {
+        border-radius: 0rem;
+        width: 40px;
+        height: 38px;
+      }
+
+      input {
+        width: 50px;
+        height: 38px;
+        vertical-align: middle;
+        text-align: center;
+      }
+    }
+  }
+
+
 
 }
 
 .product-description {
   .description-title {
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
+
   }
 }
-
-
-
 
 .text-danger {
   color: $red;
