sidebar嘗試變動部分

--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -8,3 +8,4 @@
 @import "./pages/front/frontProduct";
 @import "./pages/front/frontHome";
 @import "./pages/front/frontSingleProduct";
+@import "./components/front/frontSidebar";
