--- a/src/assets/scss/pages/front/_frontProduct.scss
+++ b/src/assets/scss/pages/front/_frontProduct.scss
@@ -4,23 +4,40 @@
 
 .link-block {
   display: block;
+
+  .card-body {
+    height: 155px;
+  }
+
+  .card-title {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    white-space: normal;
+  }
+
+  .card-text {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    white-space: normal;
+  }
 }
 
-.product-hover:hover {
-  transform: scale(1.01);
-  transition: .1s;
+.product-hover {
+  transform: scale(1.00);
+  transition: .2s;
+
+  &:hover {
+    transform: scale(1.01);
+    transition: .2s;
+  }
 }
 
-.card-body {
-  height: 150px;
-}
 
-.card-text {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-  white-space: normal;
-}
