--- a/src/assets/scss/pages/front/_frontSingleProduct.scss
+++ b/src/assets/scss/pages/front/_frontSingleProduct.scss
@@ -106,15 +106,38 @@
       }
     }
   }
-
-
-
 }
 
 .product-description {
   .description-title {
     margin-bottom: 0.5rem;
 
+  }
+}
+
+.recommand-products {
+
+  .card-title {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    white-space: normal;
+  }
+
+  .card-body {
+    padding: 0.75rem;
+    height: 70px;
+  }
+
+  .card-footer {
+    //vertical-align: middle;
+    .h6 {
+      margin-bottom: 0;
+      color: $danger;
+    }
   }
 }
 
