--- a/src/assets/scss/pages/front/_frontHome.scss
+++ b/src/assets/scss/pages/front/_frontHome.scss
@@ -35,23 +35,77 @@
 
 }
 
-//products hero
-.hero-col-4 {
-  flex: 0 0 33.33333%;
-  max-width: 33.33333%;
-  position: relative;
-  width: 100%;
-  padding: 0 3px;
-}
-
 #heroProducts {
+  .col-lg-3 {
+    padding: 0 5px;
+
+  }
+
   .card-header {
-    position: absolute;
-    padding: 1.5rem 0 30px;
+    //position: absolute;
+    padding: 1.2rem .4rem 0 .4rem;
     text-align: center;
     width: 100%;
+    height: 110px;
     background-color: rgba(0, 0, 0, 0);
     border: none;
+
+    h4 {
+      margin-bottom: 0.2rem;
+      font-size: $font-size-lg;
+
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      white-space: normal;
+    }
+
+    p {
+      font-size: $font-size-base;
+      margin-bottom: 8px;
+    }
+
+    @media screen and (max-width: 1200px) {
+      h4 {
+        font-size: $font-size-xl;
+      }
+
+      p {
+        font-size: $font-size-sm;
+      }
+    }
+
+    @media screen and (max-width: 991px) {
+      h4 {
+        font-size: $font-size-xl;
+      }
+
+      p {
+        font-size: $font-size-base;
+      }
+    }
+
+    @media screen and (max-width: 767px) {
+      h4 {
+        font-size: $font-size-xl;
+      }
+
+      p {
+        font-size: $font-size-base;
+      }
+    }
+  }
+
+  .card-img {
+    height: 0;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin: 0 auto;
+    padding-bottom: 80%;
   }
 
   .card-text {
@@ -59,4 +113,3 @@
   }
 
 }
-
