--- a/src/assets/scss/utils/_variables.scss
+++ b/src/assets/scss/utils/_variables.scss
@@ -288,8 +288,11 @@ $font-family-base:            $font-family-sans-serif !default;
 // stylelint-enable value-keyword-case
 
 $font-size-base:              1rem !default; // Assumes the browser default, typically `16px`
+$font-size-2xl:                $font-size-base * 2 !default;
+$font-size-xl:                $font-size-base * 1.5 !default;
 $font-size-lg:                $font-size-base * 1.25 !default;
 $font-size-sm:                $font-size-base * .875 !default;
+$font-size-xs:                $font-size-base * .5 !default;
 
 $font-weight-lighter:         lighter !default;
 $font-weight-light:           300 !default;
