slider RWD full page

--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -9,3 +9,4 @@
 @import "./pages/front/frontHome";
 @import "./pages/front/frontSingleProduct";
 @import "./components/front/frontSidebar";
+@import "./pages/front/frontSlideshow";
