Slide RWD product page

--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -10,3 +10,4 @@
 @import "./pages/front/frontSingleProduct";
 @import "./components/front/frontSidebar";
 @import "./pages/front/frontSlideshow";
+@import "./pages/front/frontSlideProducts";
