home banner color test

--- a/src/assets/scss/pages/front/_frontProduct.scss
+++ b/src/assets/scss/pages/front/_frontProduct.scss
@@ -28,6 +28,10 @@
     -webkit-box-orient: vertical;
     white-space: normal;
   }
+
+  .card-footer {
+    background-color: #f2a365;
+  }
 }
 
 .product-hover {
