--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -11,3 +11,4 @@
 @import "./components/front/frontSidebar";
 @import "./pages/front/frontSlideshow";
 @import "./pages/front/frontSlideProducts";
+@import "./components/front/frontNavbar";
