--- a/src/assets/scss/pages/front/_frontHome.scss
+++ b/src/assets/scss/pages/front/_frontHome.scss
@@ -5,23 +5,64 @@
 }
 
 .mid-banner {
+  position: relative;
   width: 100%;
-  max-width: 100%;
-  display: block;
-  margin: 0 auto;
-  padding: 30px 50px;
-  background-color: white;
+  height: 30vh;
+  background-color: #181818;
 
-  h6 {
-    width: 100%;
-    text-align: center;
-    margin: 0;
+  .mid-banner-img {
+    height: 100%;
+    background-image: url('~@/assets/img/midBanner.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 40%;
+    width: 55%;
+    margin-left: auto;
+    
+    @media screen and (max-width: 991px) {
+      width: 100%;
+    }
   }
+
+  .mid-banner-content {
+    left: 5%;
+    color: #f7f7f7;
+
+    top: 50%;
+    width: 45%;
+    padding: 20px;
+    z-index: 1;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    background-color: #111111;
+    border: #F68657 1.5px solid;
+    position: absolute;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+
+    @media screen and (max-width: 991px) {
+      width: 90%;
+      background-color: rgba(0,0,0,0.7);
+    }
+
+  }
+
 }
 
 //build pc
 .build-pc {
-  
+
 
   .row {
     background-color: $black;
@@ -38,8 +79,32 @@
 }
 
 #heroProducts {
+
+  .row {
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+  .card {
+    background-color: #181818;
+
+    &:hover {
+      border: #F68657 1.5px solid;
+    }
+
+  }
+
+  .hero-hover {
+    transform: scale(1.00);
+    transition: .2s;
+
+    &:hover {
+      transform: scale(1.01);
+      transition: .2s;
+    }
+  }
+
   .col-lg-3 {
-    padding: 0 5px;
+    padding: 0 10px;
 
   }
 
@@ -49,12 +114,12 @@
     text-align: center;
     width: 100%;
     height: 110px;
-    background-color: rgba(0, 0, 0, 0);
     border: none;
 
     h4 {
       margin-bottom: 0.2rem;
       font-size: $font-size-lg;
+      color: #F68657;
 
       overflow: hidden;
       white-space: nowrap;
@@ -67,6 +132,7 @@
 
     p {
       font-size: $font-size-base;
+      color: #f7f7f7;
       margin-bottom: 8px;
     }
 
