--- a/src/assets/scss/pages/front/_frontSingleProduct.scss
+++ b/src/assets/scss/pages/front/_frontSingleProduct.scss
@@ -118,6 +118,16 @@
 
 .recommand-products {
 
+  .recommand-hover {
+    transform: scale(1.00);
+    transition: .2s;
+
+    &:hover {
+      transform: scale(1.01);
+      transition: .2s;
+    }
+  }
+
   .card-title {
     overflow: hidden;
     white-space: nowrap;
@@ -134,6 +144,7 @@
   }
 
   .card-footer {
+
     //vertical-align: middle;
     .h6 {
       margin-bottom: 0;
