Home mid & shoppingCart RWD

--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -12,3 +12,5 @@
 @import "./pages/front/frontSlideshow";
 @import "./pages/front/frontSlideProducts";
 @import "./components/front/frontNavbar";
+@import "./components/back/login";
+@import "./pages/front/frontShoppingCart";
