--- a/src/assets/scss/utils/_variables.scss
+++ b/src/assets/scss/utils/_variables.scss
@@ -66,8 +66,11 @@ $colors: map-merge(
   $colors
 );
 
-$primary:       $blue !default;
-$secondary:     $gray-600 !default;
+// $primary:       $blue !default;
+// $secondary:     $gray-600 !default;
+$primary:      #F68657;
+$secondary:    #F7F7F7;
+$third:        #181818;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
@@ -82,6 +85,8 @@ $theme-colors: map-merge(
   (
     "primary":    $primary,
     "secondary":  $secondary,
+    "third":      $third,
+
     "success":    $success,
     "info":       $info,
     "warning":    $warning,
