調整結帳業面 (縮圖無法置中)

--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -14,3 +14,5 @@
 @import "./components/front/frontNavbar";
 @import "./components/back/login";
 @import "./pages/front/frontShoppingCart";
+@import "./pages/front/frontCartItems";
+@import "./pages/front/frontOrderList";
