--- a/src/assets/scss/pages/front/_frontShoppingCart.scss
+++ b/src/assets/scss/pages/front/_frontShoppingCart.scss
@@ -30,7 +30,7 @@
       align-items: center;
 
       @media screen and (max-width: 767px) {
-        margin: 0 0 6px 0;
+        margin: 0 5px 7px 5px;
       }
     }
 
