checkout order & RWD adjust

--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -16,3 +16,4 @@
 @import "./pages/front/frontShoppingCart";
 @import "./pages/front/frontCartItems";
 @import "./pages/front/frontOrderList";
+@import "./pages/front/frontCheckOrder";
