--- a/src/assets/scss/pages/front/_frontShoppingCart.scss
+++ b/src/assets/scss/pages/front/_frontShoppingCart.scss
@@ -3,7 +3,7 @@
   padding: 2rem;
 
   @media screen and (max-width: 767px) {
-    padding: 1.5rem 0.7rem 1.5rem 0.7rem;
+    padding: 1.5rem 1rem 1.5rem 1rem;
   }
 
   .shopping-step {
@@ -12,10 +12,6 @@
 
     @media screen and (max-width: 767px) {
       flex-direction: column;
-    }
-
-    h5 {
-      margin: 0;
     }
 
     .step {
@@ -30,7 +26,16 @@
       align-items: center;
 
       @media screen and (max-width: 767px) {
-        margin: 0 5px 7px 5px;
+        margin: 0 0 7px 0;
+        padding: 0.8rem;
+      }
+    }
+
+    h5 {
+      margin: 0;
+
+      @media screen and (max-width: 767px) {
+        font-size: $font-size-base;
       }
     }
 
