--- a/src/assets/scss/pages/front/_frontSingleProduct.scss
+++ b/src/assets/scss/pages/front/_frontSingleProduct.scss
@@ -1,5 +1,4 @@
 .fsp-container-fluid {
-  //width: 100%;
   max-width: 1200px;
   margin: 0 auto;
   padding-right: 15px;
@@ -9,35 +8,30 @@
     background-color: white;
     margin: 0 auto;
     padding: 1.5rem;
+
+    @media screen and (max-width: 767px) {
+      padding: 0.8rem 0.6rem 1.5rem 0.6rem;
+    }
   }
 }
 
 .product-header {
 
-  .row {
-    @media screen and (max-width: 767px) {
-      padding: 0.5rem 1.5rem 1.5rem 1.5rem;
-    }
-  }
-
-  .product-img {
-    min-height: 450px;
-    position: relative;
+  .product-wrap {  
+    display: flex;
+    align-items: center;
 
     @media screen and (max-width: 767px) {
       margin-bottom: 1rem;
     }
 
-    img {
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      margin: auto;
-      padding: 0 15px;
-      max-height: 100%;
-      max-width: 100%;
+    .product-img {
+      width: 100%;
+      height: 0;
+      padding-bottom: 100%;
+      background-size: contain;
+      background-position: center;
+      background-repeat: no-repeat;
     }
   }
 
@@ -62,6 +56,16 @@
 
     .h4 {
       margin-bottom: 0;
+      @media screen and (max-width: 575px) {
+        font-size: $font-size-lg;
+      }
+  
+    }
+
+    .h5 {
+      @media screen and (max-width: 575px) {
+        font-size: $font-size-base;
+      }
     }
 
   }
@@ -72,7 +76,7 @@
 
   .product-input {
     .buy-option {
-      
+
       @media screen and (max-width: 767px) {
         text-align: center;
       }
@@ -122,11 +126,20 @@
 .product-description {
   .description-title {
     margin-bottom: 0.5rem;
-
+    
+    @media screen and (max-width: 767px) {
+      margin-top: 0.8rem;
+    }
   }
 }
 
 .recommand-products {
+
+  .recommand-title {
+    @media screen and (max-width: 767px) {
+      margin-top: 0.8rem;
+    }
+  }
 
   .recommand-hover {
     transform: scale(1.00);
