--- a/src/assets/scss/components/front/_frontNavbar.scss
+++ b/src/assets/scss/components/front/_frontNavbar.scss
@@ -4,4 +4,15 @@
   .btn {
     border-radius: 0;
   }
+
+  .navbar-logo {
+    margin: 0 1rem;
+    padding: 0.4rem 0;
+
+    span {
+      font-size: $font-size-xl;
+      color: $secondary;
+    }
+  }
+
 }
