--- a/src/assets/scss/pages/front/_frontSingleProduct.scss
+++ b/src/assets/scss/pages/front/_frontSingleProduct.scss
@@ -143,11 +143,13 @@
 
   .recommand-hover {
     transform: scale(1.00);
-    transition: .2s;
+    transition: ease-out;
+    transition-duration: 0.2s;
 
     &:hover {
       transform: scale(1.01);
-      transition: .2s;
+      transition: ease-out;
+      transition-duration: 0.2s;
     }
   }
 
