--- a/src/assets/scss/pages/front/_frontCartItems.scss
+++ b/src/assets/scss/pages/front/_frontCartItems.scss
@@ -7,6 +7,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-color: #FFFFFF;
+    margin: 0 auto;
   }
 
   td {
