--- a/src/assets/scss/pages/front/_frontHome.scss
+++ b/src/assets/scss/pages/front/_frontHome.scss
@@ -13,7 +13,6 @@
   .mid-banner-img {
     height: 100%;
     background-image: url('~@/assets/img/midBanner_fixed.jpg');
-    //background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50%;
@@ -52,18 +51,25 @@
     -ms-flex-align: center;
     align-items: center;
 
+    transition: ease-out;
+    transition-duration: 0.2s;
+
+    &:hover {
+      color: $primary;
+      border-color: $secondary;
+      transition: ease-out;
+      transition-duration: 0.2s;
+    }
+
     @media screen and (max-width: 991px) {
       width: 90%;
       background-color: rgba(0, 0, 0, 0.7);
     }
-
   }
-
 }
 
 //build pc
 .build-pc {
-
 
   .row {
     background-color: $black;
@@ -82,8 +88,8 @@
 #heroProducts {
 
   .row {
-    padding-right: 15px;
-    padding-left: 15px;
+    padding-right: 8px;
+    padding-left: 8px;
   }
 
   .card {
@@ -93,6 +99,9 @@
       border: #F68657 1.5px solid;
     }
 
+    @media screen and (max-width: 991px) {
+      margin-bottom: 1rem;
+    }
   }
 
   .hero-hover {
@@ -109,7 +118,6 @@
 
   .col-lg-3 {
     padding: 0 10px;
-
   }
 
   .card-header {
@@ -182,6 +190,98 @@
 
   .card-text {
     position: absolute;
+  }
+
+}
+
+.home-article {
+  width: 100%;
+  background-color: $third;
+
+  .article-wrap {
+    position: relative;
+    padding: 0;
+    border: none;
+  }
+
+  .card-img-overlay {
+    padding: 0;
+    transition: ease-out;
+    transition-duration: 0.2s;
+
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.5);
+      transition: ease-out;
+      transition-duration: 0.2s;
+
+      .article-content-wrap {
+        background-color: transparent;
+        transition: ease-out;
+        transition-duration: 0.2s;
+      }
+
+    }
+  }
+
+  .article-img {
+    height: 60vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  .article-content-wrap {
+    padding: 1.5rem 2.5rem;
+    height: 42%;
+    background-color: rgba(0, 0, 0, 0.5);
+    transition: ease-out;
+    transition-duration: 0.2s;
+
+    top: 50%;
+    z-index: 1;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    position: absolute;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+
+    @media screen and (max-width: 575px) {
+      padding: 1rem 2rem;
+    }
+
+    .card-title {
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      white-space: normal;
+    }
+
+    .card-text {
+      font-size: $font-size-base;
+
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      white-space: normal;
+    }
+
   }
 
 }
