--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -17,6 +17,7 @@
 @import "./pages/front/frontCartItems";
 @import "./pages/front/frontOrderList";
 @import "./pages/front/frontCheckOrder";
+@import "./components/front/pgnation";
 
 @import "./pages/back/product";
 @import "./pages/back/orderList";
