--- a/src/assets/scss/components/front/_frontFooter.scss
+++ b/src/assets/scss/components/front/_frontFooter.scss
@@ -6,13 +6,14 @@
   .footer-link {
     padding-top: 4px;
     padding-bottom: 4px;
+
+    @media screen and (max-width: 575px) {
+      padding-top: 10px;
+      padding-bottom: 10px;
+    }
   }
 
   a {
     color: darken($color: $secondary, $amount: 10);
-    
   }
 }
-
-
-
