--- a/src/assets/scss/components/back/_login.scss
+++ b/src/assets/scss/components/back/_login.scss
@@ -2,6 +2,7 @@
   height: 100vh;
   width: 100%;
   position: relative;
+  background-image: url('~@/assets/img/background.jpg');
 
   .login {
     padding: 0;
