--- a/src/assets/scss/pages/front/_frontHome.scss
+++ b/src/assets/scss/pages/front/_frontHome.scss
@@ -91,9 +91,13 @@
     padding-right: 8px;
     padding-left: 8px;
   }
-
+  
   .card {
     background-color: #181818;
+    background-image: url('~@/assets/img/hero-s-background.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 
     &:hover {
       border: #F68657 1.5px solid;
@@ -127,6 +131,7 @@
     width: 100%;
     height: 110px;
     border: none;
+    background-color: transparent;
 
     h4 {
       margin-bottom: 0.2rem;
