--- a/src/assets/scss/pages/front/_frontSlideProducts.scss
+++ b/src/assets/scss/pages/front/_frontSlideProducts.scss
@@ -20,6 +20,37 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+
+    @media screen and (max-width: 575px) {
+      min-height: 35vh;
+      background-size: cover;
+    }
+  }
+
+  .slide1 {
+    background-image: url('~@/assets/img/product_1_lg.png');
+  
+    @media screen and (max-width: 575px) {
+      background-image: url('~@/assets/img/product_1_xs.png');
+    }
+  
+  }
+  
+  .slide2 {
+    background-image: url('~@/assets/img/product_2_lg.png');
+  
+    @media screen and (max-width: 575px) {
+      background-image: url('~@/assets/img/product_2_xs.png');
+    }
+  
+  }
+  
+  .slide3 {
+    background-image: url('~@/assets/img/product_3_lg.png');
+  
+    @media screen and (max-width: 575px) {
+      background-image: url('~@/assets/img/product_3_xs.png');
+    }
   }
   
 }
