--- a/src/assets/scss/pages/front/_frontCheckOrder.scss
+++ b/src/assets/scss/pages/front/_frontCheckOrder.scss
@@ -1,8 +1,42 @@
-.order-wrap {
-  background-color: $secondary;
-  padding: 2rem;
+.trace-order-wrap {
+  background-color: $third;
+  border: $primary 1.5px solid;
+  padding: 3.5rem 7rem;
 
+  @media screen and (max-width: 991px) {
+    padding: 3rem 3rem;
+  }
   @media screen and (max-width: 767px) {
-    padding: 1.5rem 1rem 1.5rem 1rem;
+    padding: 2rem 2.5rem;
+  }
+  @media screen and (max-width: 575px) {
+    padding: 2rem 1.5rem;
+  }
+
+  .form-control {
+    border: none;
+  }
+
+  table {
+    color: $secondary;
+    th {
+      color: $primary;
+      font-weight: normal;
+    }
+  }
+  
+  .orderList-table {
+    margin-bottom: 1.5rem;
+  }
+
+  .empty-order-wrap {   
+    text-align: center;
+    color: $secondary;
+    margin-top: 3.5rem;
+
+    img {
+      height: 200px;
+      color: $secondary;
+    }
   }
 }
