--- a/src/assets/scss/pages/front/_frontSingleProduct.scss
+++ b/src/assets/scss/pages/front/_frontSingleProduct.scss
@@ -186,6 +186,6 @@
 pre {
   white-space: pre-wrap;
   word-wrap: break-word;
-  font-family: 'Noto Sans TC', sans-serif;
+  font-family: 'Dosis', 'Noto Sans TC', sans-serif;
   font-size: $font-size-base;
 }
