--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap');
 body {
-  font-family: 'Noto Sans TC', sans-serif;
+  font-family: 'Dosis', 'Noto Sans TC', sans-serif;
   background-color: #000000;
 }
 
@@ -8,10 +9,10 @@ body {
   padding-top: 3.6rem;
 }
 
-img{
-	border: 0;
-	max-width: 100%;
-	height: auto;
+img {
+  border: 0;
+  max-width: 100%;
+  height: auto;
 }
 
 a {
@@ -22,7 +23,7 @@ a {
     text-decoration: none;
     color: $black;
   }
-  
+
 }
 
 .btn {
@@ -30,6 +31,7 @@ a {
 }
 
 .form-control {
+  border: none;
   border-radius: 0;
 }
 
@@ -55,3 +57,9 @@ ul {
 .card-footer:last-child {
   border-radius: 0;
 }
+
+.orderTable-title {
+  color: $secondary;
+  margin-bottom: 0.75rem;
+}
+
