--- a/src/assets/scss/pages/front/_frontShoppingCart.scss
+++ b/src/assets/scss/pages/front/_frontShoppingCart.scss
@@ -1,5 +1,6 @@
 .cart-wrap {
   background-color: $third;
+  border: $primary 1.5px solid;
   padding: 3.5rem 7rem;
 
   @media screen and (max-width: 991px) {
