--- a/src/assets/scss/components/back/_login.scss
+++ b/src/assets/scss/components/back/_login.scss
@@ -1,10 +1,10 @@
-.login-wrap {
+.login {
   height: 100vh;
   width: 100%;
   position: relative;
   background-image: url('~@/assets/img/background.jpg');
 
-  .login {
+  .form-wrap {
     padding: 0;
     position: absolute;
     top: -5%;
