--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap');
+
 body {
   font-family: 'Dosis', 'Noto Sans TC', sans-serif;
   background-color: #000000;
@@ -8,6 +9,10 @@ body {
 
 .main {
   padding-top: 3.6rem;
+
+  @media screen and (max-width: 767px) {
+    padding-top: 3.125rem;
+  }
 }
 
 img {
@@ -44,6 +49,73 @@ ul {
   list-style-type: none;
   padding-inline-start: 0;
 }
+
+
+.navbar {
+  background-color: $third;
+
+
+  .navbar-logo {
+    padding: 0.4rem 0;
+    margin-left: 1rem;
+    margin-right: 2rem;
+
+    @media screen and (max-width: 767px) {
+      padding: 0.3rem 0;
+    }
+  }
+
+  .navbar-toggler {
+    padding: 0.25rem 0.75rem;
+
+    @media screen and (max-width: 767px) {
+      padding: 0.2rem 0.6rem;
+    }
+
+    .navbar-toggler-icon {
+      height: 1.5rem;
+
+      @media screen and (max-width: 767px) {
+        height: 1.3rem;
+      }
+    }
+
+  }
+
+  .btn {
+    border-radius: 0;
+  }
+
+  span {
+    font-size: $font-size-xl;
+    color: $secondary;
+
+    @media screen and (max-width: 767px) {
+      font-size: $font-size-lg;
+    }
+  }
+}
+
+
+.step-control {
+  .btn {
+    width: 140px;
+
+    @media screen and (max-width: 575px) {
+      width: 47%;
+    }
+  }
+
+}
+
+
+
+
+
+
+
+
+
 
 .card {
   border-radius: 0;
