--- a/src/assets/scss/pages/front/_frontOrderList.scss
+++ b/src/assets/scss/pages/front/_frontOrderList.scss
@@ -1,3 +1,12 @@
-.form-group > label {
-  color: $secondary;
+.orderList-wrap {
+  padding: 0 1rem;
+
+  @media screen and (max-width: 767px) {
+    padding: 0;
+  }
+
+  .form-group>label {
+    color: $secondary;
+  }
+
 }
