RWD問題全修正, 補份內容填充, navbar自動上捲

--- a/src/assets/scss/pages/front/_frontSingleProduct.scss
+++ b/src/assets/scss/pages/front/_frontSingleProduct.scss
@@ -48,7 +48,7 @@
     }
 
     .product-price {
-      background-color: $gray-100;
+      background-color: lighten($color: $third, $amount: 86);
       padding: 1rem;
       margin-bottom: 0.75rem;
     }
