--- a/src/assets/scss/components/back/_login.scss
+++ b/src/assets/scss/components/back/_login.scss
@@ -1,20 +1,33 @@
 .login {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 100vh;
   width: 100%;
-  position: relative;
+  // position: relative;
   background-image: url('~@/assets/img/background.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 
   .form-wrap {
-    padding: 0;
-    position: absolute;
-    top: -5%;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    margin: auto;
-    max-width: 400px;
-    max-height: 650px;
-  
+    // padding: 0;
+    // position: absolute;
+    // top: -5%;
+    // right: 0;
+    // bottom: 0;
+    // left: 0;
+    // margin: auto;
+    // max-width: 400px;
+    // max-height: 650px;
+
+    max-width: 20vw;
+    max-height: 40vh;
+    min-width: 350px;
+    min-height: 650px;
+
+
+
     border-top: $primary 1.5px solid;
     border-bottom: $primary 1.5px solid;
     background-color: #181818;
@@ -25,7 +38,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     height: 300px;
-  
+
     h1 {
       color: $secondary;
       text-align: center;
@@ -35,7 +48,7 @@
 
   .login-content {
     padding: 2rem 2rem 2rem 2rem;
-  
+
     .remember-text {
       color: $secondary;
       font-size: $font-size-base;
@@ -45,7 +58,7 @@
       border-radius: 0;
       border: none;
     }
-  
+
     button {
       border-radius: 0;
     }
@@ -53,9 +66,3 @@
   }
 
 }
-
-
-
-
-
-
