shoppingCart堆疊, 付款完成modal

--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -18,4 +18,5 @@
 @import "./pages/front/frontOrderList";
 @import "./pages/front/frontCheckOrder";
 @import "./components/front/pgnation";
+@import "./pages/front/frontCheckout";
 
