--- a/src/assets/scss/pages/front/_frontCartItems.scss
+++ b/src/assets/scss/pages/front/_frontCartItems.scss
@@ -9,13 +9,6 @@
 
 .cart-items {
 
-  .qty-input {
-    button {
-      padding: 0.3rem 0.7rem;
-      font-size: 0.75rem;
-    }
-  }
-
   .product-preview {
     height: 120px;
     width: 120px;
@@ -28,6 +21,30 @@
 
   td {
     text-align: center;
+  }
+
+  .qty-adjust {
+
+    .btn {
+      border-radius: 0rem;
+      width: 26px;
+      height: 26px;
+      padding: 0;
+      font-size: $font-size-sm;
+    }
+
+    input {
+      width: 35px;
+      height: 26px;
+      vertical-align: middle;
+      text-align: center;
+      outline: none;
+      border: $secondary 1px solid;
+      background-color: $third;
+      color: $secondary;
+      font-size: $font-size-sm;
+    }
+
   }
 
 }
