--- a/src/assets/scss/pages/front/_frontCheckout.scss
+++ b/src/assets/scss/pages/front/_frontCheckout.scss
@@ -1,16 +1,25 @@
 .checkout-wrap {
-  padding: 3.5rem 7rem;
 
-  @media screen and (max-width: 991px) {
-    padding: 3rem 3rem;
+  .modal-content {
+    min-height: 300px;
+    min-width: 250px;
+    max-width: 80vh;
+    max-height: 50vh;
+    background-image: url('~@/assets/img/modal_bg.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
   }
 
-  @media screen and (max-width: 767px) {
-    padding: 2rem 2.5rem;
-  }
-
-  @media screen and (max-width: 575px) {
-    padding: 2rem 1.5rem;
+  .modal-body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem;
+    background-color: rgba(0, 0, 0, 0.8);
+    border: $secondary 1.5px solid;
   }
 
 }
+
