--- a/src/assets/scss/pages/front/_frontSingleProduct.scss
+++ b/src/assets/scss/pages/front/_frontSingleProduct.scss
@@ -117,6 +117,7 @@
         height: 38px;
         vertical-align: middle;
         text-align: center;
+        outline: none;
       }
     }
   }
