--- a/src/assets/scss/pages/front/_frontSingleProduct.scss
+++ b/src/assets/scss/pages/front/_frontSingleProduct.scss
@@ -155,6 +155,10 @@
 }
 
 .recommand-products {
+  .row {
+    background-color: $secondary;
+  }
+
   .recommand-title {
     @media screen and (max-width: 767px) {
       margin-top: 0.8rem;
@@ -171,10 +175,6 @@
       transition: ease-out;
       transition-duration: 0.2s;
     }
-  }
-
-  .card {
-    background-color: $secondary;
   }
 
   .card-title {
