--- a/src/assets/scss/pages/front/_frontHome.scss
+++ b/src/assets/scss/pages/front/_frontHome.scss
@@ -18,7 +18,7 @@
 
   .mid-banner-img {
     height: 100%;
-    background-image: url('~@/assets/img/midBanner_fixed.jpg');
+    background-image: url('~@/assets/img/home_banner_RGB.gif');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50%;
@@ -43,18 +43,9 @@
     background-color: #111111;
     border: #F68657 1.5px solid;
     position: absolute;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
     flex-direction: column;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
 
     transition: ease-out;
