--- a/src/assets/scss/pages/front/_frontOrderList.scss
+++ b/src/assets/scss/pages/front/_frontOrderList.scss
@@ -5,8 +5,22 @@
     padding: 0;
   }
 
+  form {
+    margin-bottom: 2rem;
+
+    &:last-child {
+      margin-bottom: 0rem;
+    }
+  }
+
   .form-group>label {
     color: $secondary;
+  }
+
+  .form-title {
+    font-size: $font-size-lg;
+    color: $primary;
+    margin-bottom: 0.5rem;
   }
 
 }
