--- a/src/assets/scss/pages/front/_frontSingleProduct.scss
+++ b/src/assets/scss/pages/front/_frontSingleProduct.scss
@@ -10,7 +10,7 @@
     padding: 1.5rem;
 
     @media screen and (max-width: 767px) {
-      padding: 0.8rem 0.6rem 1.5rem 0.6rem;
+      padding: 0.8rem 0.4rem 1.5rem 0.4rem;
     }
   }
 
@@ -33,12 +33,25 @@
     }
 
     .product-img {
-      width: 100%;
-      height: 0;
       padding-bottom: 100%;
-      background-size: contain;
-      background-position: center;
-      background-repeat: no-repeat;
+      height: 0;
+      width: 100%;
+      position: relative;
+
+      .abs-wrap {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+      }
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        border: none;
+      }
     }
   }
 
@@ -62,8 +75,6 @@
     }
 
     .h4 {
-      margin-bottom: 0;
-
       @media screen and (max-width: 575px) {
         font-size: $font-size-lg;
       }
@@ -73,6 +84,7 @@
     .h5 {
       @media screen and (max-width: 575px) {
         font-size: $font-size-base;
+
       }
     }
 
