--- a/src/assets/scss/pages/front/_frontCheckOrder.scss
+++ b/src/assets/scss/pages/front/_frontCheckOrder.scss
@@ -22,6 +22,8 @@
     th {
       color: $primary;
       font-weight: normal;
+      padding-left: 0.35rem;
+      padding-right: 0.35rem;
     }
   }
   
