--- a/src/assets/scss/pages/front/_frontCheckout.scss
+++ b/src/assets/scss/pages/front/_frontCheckout.scss
@@ -1,5 +1,10 @@
 .checkout-wrap {
 
+  th {
+    padding-left: 0.35rem;
+    padding-right: 0.35rem;
+  }
+
   .modal-content {
     min-height: 300px;
     min-width: 250px;
