修正首頁HERO擠壓下方元素問題

--- a/src/assets/scss/pages/front/_frontHome.scss
+++ b/src/assets/scss/pages/front/_frontHome.scss
@@ -92,6 +92,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    border: transparent 1.5px solid;
     transition: ease-out;
     transition-duration: 0.2s;
 
